--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html {
 body {
     color: var(--text);
     background:var(--background);
+    font-family: "Bitcount Prop Single Ink"
 }
 
 h1,
@@ -27,8 +28,12 @@ li::marker {
 
 img {
     padding: 4px;
-    border: 4px solid var(--secondary)
+    border: 4px solid var(--secondary);
+    border-radius: 20px;
+    background: var(--accent)
 
+}
 
-
+audio {
+    background: var(--secondary)
 }
