you will regret that

--- a/style.css
+++ b/style.css
@@ -20,7 +20,11 @@ h3 {
 
 p {
     background: var(--background)
+{
+    border: 4px solid indigo
 }
+}
+
 
 li::marker {
     color: var(secondary)
@@ -29,7 +33,7 @@ li::marker {
 img {
     padding: 4px;
     border: 4px solid var(--secondary);
-    border-radius: 20px;
+    border-radius: 400px;
     background: var(--accent)
 
 }
@@ -37,9 +41,7 @@ img {
 audio {
     background: var(--secondary)
 }
-* {
-    border: 4px solid indigo
-}
+
 * {
 margin:5px
 }
